--- a/vercel.json
+++ b/vercel.json
@@ -3,74 +3,24 @@
     "builds": [
         {
             "src": "server.js",
-            "use": "@vercel/node",
-            "config": {
-                "maxLambdaSize": "15mb",
-                "includeFiles": [
-                    "dist/**",
-                    "index.html",
-                    "package.json",
-                    "package-lock.json"
-                ]
-            }
+            "use": "@vercel/node"
+        },
+        {
+            "src": "dist/**/*",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "/server.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "PATCH",
-                "OPTIONS"
-            ]
+            "dest": "server.js"
         },
         {
             "src": "/(.*)",
-            "dest": "/server.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "PATCH",
-                "OPTIONS"
-            ]
+            "dest": "dist/index.html"
         }
     ],
     "env": {
         "NODE_ENV": "production"
-    },
-    "functions": {
-        "server.js": {
-            "maxDuration": 30,
-            "memory": 3008
-        }
-    },
-    "headers": [
-        {
-            "source": "/(.*)",
-            "headers": [
-                {
-                    "key": "Access-Control-Allow-Origin",
-                    "value": "*"
-                },
-                {
-                    "key": "Access-Control-Allow-Methods",
-                    "value": "GET,POST,PUT,DELETE,OPTIONS"
-                },
-                {
-                    "key": "Access-Control-Allow-Headers",
-                    "value": "X-Requested-With, Content-Type, Authorization"
-                },
-                {
-                    "key": "Cache-Control",
-                    "value": "public, max-age=0, must-revalidate"
-                }
-            ]
-        }
-    ]
+    }
 }
